--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -20,6 +21,8 @@
     "http-errors": "^1.7.1",
     "knex": "^0.16.3",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.8.0",
     "pug": "^2.0.3",
     "uuid": "^3.3.2"
